// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account form matches snapshot for existing Coinbase account 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 WithFormik(ImportFromInstitutionFormComponent)-root-226 MuiPaper-rounded"
  >
    <div
      className="WithFormik(ImportFromInstitutionFormComponent)-formHeader-227"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Import from
        Coinbase
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root MuiIconButton-root WithFormik(ImportFromInstitutionFormComponent)-closeButton-228"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
    <hr
      className="MuiDivider-root"
    />
    <div
      className="MuiGrid-root WithFormik(ImportFromInstitutionFormComponent)-input-230 MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <p
        className="MuiTypography-root MuiTypography-caption MuiTypography-paragraph"
      >
        Your browser will connect directly to 
        <strong>
          Coinbase
        </strong>
         so you're really importing your own data.
      </p>
      <div>
        <p
          className="MuiTypography-root MuiTypography-caption MuiTypography-paragraph"
        >
          <a
            href="https://www.coinbase.com/settings/api"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary"
            >
              Create an API key on Coinbase (opens in a new tab)
            </span>
          </a>
        </p>
        <div
          className="MuiPaper-root MuiPaper-elevation1 MuiCard-root  DescriptionCard-card-422 MuiPaper-rounded"
        >
          <div
            className="MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root DescriptionCard-icon-423"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span
              className="MuiTypography-root MuiTypography-caption"
            >
              Make sure your api key has access to 
              <strong>
                all accounts
              </strong>
               and has the following permimisions:
              <ul>
                <li>
                  <strong>
                    wallet:accounts:read
                  </strong>
                </li>
                <li>
                  <strong>
                    wallet:transactions:read
                  </strong>
                </li>
              </ul>
            </span>
          </div>
        </div>
      </div>
    </div>
    <form
      className="WithFormik(ImportFromInstitutionFormComponent)-form-229"
      onSubmit={[Function]}
    >
      <span
        className="WithFormik(ImportFromInstitutionFormComponent)-form-229"
      >
        <div
          className="MuiFormControl-root MuiTextField-root WithFormik(ImportFromInstitutionFormComponent)-input-230"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
          >
            API key
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API key"
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              maxLength={100}
              name="apiKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root MuiTextField-root WithFormik(ImportFromInstitutionFormComponent)-input-230"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
          >
            API secret
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API secret"
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              maxLength={100}
              name="apiSecret"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </span>
      <hr
        className="MuiDivider-root"
      />
      <div
        className="WithFormik(ImportFromInstitutionFormComponent)-formActions-233"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-479"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Import
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Account form matches snapshot for new Coinbase account 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 WithFormik(ImportFromInstitutionFormComponent)-root-226 MuiPaper-rounded"
  >
    <div
      className="WithFormik(ImportFromInstitutionFormComponent)-formHeader-227"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Import from
        Coinbase
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root MuiIconButton-root WithFormik(ImportFromInstitutionFormComponent)-closeButton-228"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
    <hr
      className="MuiDivider-root"
    />
    <div
      className="MuiGrid-root WithFormik(ImportFromInstitutionFormComponent)-input-230 MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <p
        className="MuiTypography-root MuiTypography-caption MuiTypography-paragraph"
      >
        Your browser will connect directly to 
        <strong>
          Coinbase
        </strong>
         so you're really importing your own data.
      </p>
      <div>
        <p
          className="MuiTypography-root MuiTypography-caption MuiTypography-paragraph"
        >
          <a
            href="https://www.coinbase.com/settings/api"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary"
            >
              Create an API key on Coinbase (opens in a new tab)
            </span>
          </a>
        </p>
        <div
          className="MuiPaper-root MuiPaper-elevation1 MuiCard-root  DescriptionCard-card-422 MuiPaper-rounded"
        >
          <div
            className="MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root DescriptionCard-icon-423"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span
              className="MuiTypography-root MuiTypography-caption"
            >
              Make sure your api key has access to 
              <strong>
                all accounts
              </strong>
               and has the following permimisions:
              <ul>
                <li>
                  <strong>
                    wallet:accounts:read
                  </strong>
                </li>
                <li>
                  <strong>
                    wallet:transactions:read
                  </strong>
                </li>
              </ul>
            </span>
          </div>
        </div>
      </div>
    </div>
    <form
      className="WithFormik(ImportFromInstitutionFormComponent)-form-229"
      onSubmit={[Function]}
    >
      <span
        className="WithFormik(ImportFromInstitutionFormComponent)-form-229"
      >
        <div
          className="MuiFormControl-root MuiTextField-root WithFormik(ImportFromInstitutionFormComponent)-input-230"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
          >
            API key
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API key"
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              maxLength={100}
              name="apiKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root MuiTextField-root WithFormik(ImportFromInstitutionFormComponent)-input-230"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink={false}
          >
            API secret
          </label>
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API secret"
              className="MuiInputBase-input MuiInput-input"
              disabled={false}
              maxLength={100}
              name="apiSecret"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </span>
      <hr
        className="MuiDivider-root"
      />
      <div
        className="WithFormik(ImportFromInstitutionFormComponent)-formActions-233"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-479"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Import
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Account form matches snapshot for regular account 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 WithFormik(ImportFromInstitutionFormComponent)-root-1 MuiPaper-rounded"
  >
    <div
      className="WithFormik(ImportFromInstitutionFormComponent)-formHeader-2"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6"
      >
        Import from
        TD
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root MuiIconButton-root WithFormik(ImportFromInstitutionFormComponent)-closeButton-3"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
    <hr
      className="MuiDivider-root"
    />
    <div
      className="MuiGrid-root WithFormik(ImportFromInstitutionFormComponent)-input-5 MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <p
        className="MuiTypography-root MuiTypography-caption MuiTypography-paragraph"
      >
        Your browser will connect directly to 
        <strong>
          TD
        </strong>
         so you're really importing your own data.
      </p>
    </div>
    <form
      className="WithFormik(ImportFromInstitutionFormComponent)-form-4"
      onSubmit={[Function]}
    >
      <hr
        className="MuiDivider-root"
      />
      <div
        className="WithFormik(ImportFromInstitutionFormComponent)-formActions-8"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-197"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Import
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
